--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,18 @@
 <section id="home" class="max-h-[80vh] overflow-hidden relative mb-24">
-    <div class="absolute left-0 top-0 backdrop-blur-lg w-full h-full">
-        <div class="absolute left-[50%] top-[50%] translate-x-[-50%] translate-y-[-50%] flex flex-col text-center">
+    <div class="absolute left-0 top-0 backdrop-blur-lg w-full h-full z-10">
+        <div class="absolute left-[50%] top-[50%] translate-x-[-50%] translate-y-[-50%] flex flex-col text-center ">
             <h1 class="title-shadow title font-[Allura] text-[#C42329] text-7xl">
                 Friss hús és hentesáru 
             </h1>
             <h1 class="title-shadow title2 font-[Allura] text-[#C42329] text-7xl">
                 Egyenesen a termelőtől
             </h1>
-            <!-- <h1 class="title-shadow title3 font-[Allura] text-[#8e7652] text-7xl">
-                A húspultjainkra
-            </h1> -->
-            <a class="border-[#C42329] border px-6 py-2 mt-8 rounded-[20px] mx-auto text-white shadow-2xl title-shadow font-[Akko]">Termékeink megtekintése</a>
+
+            <a routerLink="products/" routerLinkActive="active" class="opacity-0 cursor-pointer transition duration-300 hover:bg-[#C42329] border-[#C42329] border px-6 py-2 mt-8 rounded-[20px] mx-auto text-white shadow-2xl title-shadow font-[Akko] product-button">Termékeink megtekintése</a>
         </div>
     </div>
     <video [muted]="'muted'" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="w-screen"></video>
-    <img class="absolute bottom-0 w-full" src="assets/images/bg.svg" alt="">
+    <img class="absolute bottom-0 w-full z-20" src="assets/images/bg.svg" alt="">
     
     
 </section>
