--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -4,17 +4,21 @@
     </h1>
 </div>
 
-<div class="grid grid-cols-2 mt-8 gap-6 w-2/3 mx-auto">
-    <div *ngFor="let newsValue of newsList" class="flex flex-col bg-black/10 rounded-[20px] mx-auto font-[Akko-light] text-white border border-white/10 relative">
+<div class="w-1/3 mx-auto mt-8">
+    <div class="flex ml-auto mr-2 justify-end gap-2 font-[Akko] text-white">
+        <span class="rounded-[50px] bg-black/20 p-2 px-4 text-[#] border border-[#C42329]">Összes hirdetés</span>
+        <span class="rounded-[50px] bg-black/20 p-2 px-4 border border-white/10">Legutóbbi hirdetés</span>
+    </div>
+</div>
+
+<div class="flex flex-col mt-8 gap-6 w-1/3 mx-auto">
+    <div *ngFor="let newsValue of newsList" class="flex flex-col w-full bg-black/10 rounded-[20px] mx-auto font-[Akko-light] text-white border border-white/10 relative">
         <div *ngIf="newsValue[2] === 0" class="absolute left-0 top-0 bg-black/10 backdrop-blur-sm w-full h-full rounded-[20px] flex items-center justify-center">
             <div class="text-red-500 text-3xl font-[Akko] text-shadow">Lejárt hirdetés</div>
         </div>
-        <div class="w-full flex items-center justify-center">
-            <img class="w-full aspect-video rounded-t-[20px]" [src]="'assets/images/' + newsValue[1]" alt="" />
-        </div>
-        <div class="p-4">
-            {{ newsValue[3] }}
-        </div>
+        <img class="w-full rounded-t-[20px]" [src]="'assets/images/' + newsValue[1]" alt="" />
+        <div class="px-4 pt-4 text-3xl font-[Akko]">{{ newsValue[0] }}</div>
+        <div class="p-4" [innerHTML]="replaceNewlinesWithBreaks(newsValue[3])"></div>
         <div class="ml-auto mr-4 mb-2 text-white/40">
             2024. 02. 24. 0:47
         </div>
