--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -1,62 +1,97 @@
-<div class="flex items-center justify-center pt-28">
-    <h1 class="text-[#8e7652] font-[Akko] uppercase text-4xl relative after:absolute after:content-[''] after:left-0 after:bottom-0 after:bg-[#8e7652] after:h-[2px] after:w-full">Elérhetőség</h1>
-</div>
+<div class="w-1/2 mx-auto flex flex-col justify-between items-center pt-28">
+    <div class="flex w-full items-center gap-12">
+        <div class="w-full">
+            <div class="flex items-center justify-center mb-8">
+                <h1
+                    class="text-[#fff] font-[Akko] uppercase text-2xl relative after:absolute after:content-[''] after:left-0 after:bottom-0 after:bg-[#C42329] after:h-[2px] after:w-full">
+                    Kérdésed van?</h1>
+            </div>
 
-<div class="w-1/2 mx-auto mt-4 overflow-hidden rounded-[20px]">
-    <google-map tabindex="0"
-        [center]="center"
-        width="full"
-        [zoom]="zoom"
-        [options]="options"
-        >
-        <map-marker [icon] = "icon" [position]="mapMarker" [options]="markerOptions" />
-    </google-map>
-       
+            <form (ngSubmit)="sendMessage()" class="grid grid-cols-2 gap-4 font-[Akko]">
+                <div class="relative z-0 mb-6 w-full group">
+                    <input [(ngModel)] = "messageInput.email" type="email" name="email"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2  appearance-none text-white border-white focus:border-[#C42329] focus:outline-none focus:ring-0 peer"
+                        placeholder=" " required />
+                    <label for="email"
+                        class="absolute text-sm text-white duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-[#C42329] peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">E-mail
+                        cím</label>
+                </div>
+                <div class="relative z-0 mb-6 w-full group">
+                    <input [(ngModel)] = "messageInput.name" type="email" name="email"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2  appearance-none text-white border-white focus:border-[#C42329] focus:outline-none focus:ring-0 peer"
+                        placeholder=" " required />
+                    <label for="email"
+                        class="absolute text-sm text-white duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-[#C42329] peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Teljes név</label>
+                </div>
+                <div class="relative z-0 mb-6 w-full group col-span-2">
+                    <textarea [(ngModel)] = "messageInput.messageContent" type="email" name="email"
+                        class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2  appearance-none text-white border-white focus:border-[#C42329] focus:outline-none focus:ring-0 peer"
+                        placeholder=" " required></textarea>
+                    <label for="email"
+                        class="absolute text-sm text-white duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-[#C42329] peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Üzenet</label>
+                </div>
+                <input type="submit"
+                    class="w-full py-2 bg-[#C42329] col-span-2 rounded-lg text-white hover:cursor-pointer hover:shadow-[0px_0px_20px_0px_#C42329]"
+                    value="Üzenet küldése">
+            </form>
+        </div>
+        
+        <div class="w-full">
+            <div class="flex items-center justify-center mb-8">
+                <h1
+                    class="text-[#fff] font-[Akko] uppercase text-2xl relative after:absolute after:content-[''] after:left-0 after:bottom-0 after:bg-[#C42329] after:h-[2px] after:w-full">
+                    Nyitva tartásunk</h1>
+            </div>
+            <div class="flex flex-col text-right gap-2">
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Hétfő</p>
+                    <p>Zárva</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Kedd</p>
+                    <p>7:30-16:00</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Szerda</p>
+                    <p>7:30-16:00</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Csütörtök</p>
+                    <p>7:30-16:00</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Péntek</p>
+                    <p>7:30-16:00</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Szombat</p>
+                    <p>7:30-11:00</p>
+                </span>
+                <span class="flex text-white font-[Akko]">
+                    <p class="mr-auto">Vasárnap</p>
+                    <p>Zárva</p>
+                </span>
+            </div>
+        </div>
 
-</div>
+        
+    </div>
 
-
-
-<div class="w-1/2 mx-auto flex justify-between items-center">
-    <div class=" flex flex-col justify-center gap-4 mt-8 font-[Akko]">
+    <h1
+    class="text-[#fff] mt-4 font-[Akko] uppercase text-2xl relative after:absolute after:content-[''] after:left-0 after:bottom-0 after:bg-[#C42329] after:h-[2px] after:w-full">
+    Elhelyezkedés</h1>
+    <div class="flex w-full justify-between">
+        <div class="w-full mx-auto mt-4 overflow-hidden rounded-[20px] max-h-[300px]">
+            <google-map tabindex="0" [center]="center" width="full" [zoom]="zoom" [options]="options">
+                <map-marker [icon]="icon" [position]="mapMarker" [options]="markerOptions" />
+            </google-map>
+        </div>      
+    </div>
+    <div class="flex justify-center gap-4 mt-8 font-[Akko]">
         <div *ngFor="let contactData of infoElements" class="flex items-center">
-            <img [src]="['/assets/images/icons/' + contactData[0]]" alt="" class="bg-black/20 p-4 rounded-full shadow-lg" />
+            <img [src]="['/assets/images/icons/' + contactData[0]]" alt=""
+                class="bg-black/20 p-4 rounded-full shadow-lg" />
             <span class="ml-4 text-white text-center">{{ contactData[1] }} </span>
         </div>
     </div>
-    <div class="flex flex-col justify-right">
-        <h1 class="text-[#8e7652] font-[Akko] uppercase text-2xl relative after:absolute after:content-[''] after:left-0 after:bottom-0 after:bg-[#8e7652] after:h-[2px] after:w-full">Nyitvatartásunk</h1>
-        <div class="flex flex-col text-right">
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Hétfő</p>
-                <p>Zárva</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Kedd</p>
-                <p>7:30-16:00</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Szerda</p>
-                <p>7:30-16:00</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Csütörtök</p>
-                <p>7:30-16:00</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Péntek</p>
-                <p>7:30-16:00</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Szombat</p>
-                <p>7:30-11:00</p>
-            </span>
-            <span class="flex text-white font-[Akko]">
-                <p class="mr-auto">Vasárnap</p>
-                <p>Zárva</p>
-            </span>
-        </div>
-    </div>
 </div>
-
-    
