--- a/src/app/pages/admin/admin-messages/admin-messages.component.html
+++ b/src/app/pages/admin/admin-messages/admin-messages.component.html
@@ -1,6 +1,6 @@
 <div class="relative w-full px-6 flex flex-col  mt-14 lg:mt-0">
     <div class="grid xl:grid-cols-2 grid-cols-1 mt-4 xl:mt-0 items-center place-items-center">
-        <div class="w-full xl:px-2 xl:mt-6 xl:mb-6 px-2mt-2 mb-2">
+        <div class="w-full xl:mt-6 pr-2 xl:mb-6  mt-2 mb-2">
             <div class="flex items-center px-5 py-6 rounded-lg bg-black/20 border border-white/10">
                 <div class="p-3 rounded-full bg-indigo-600 bg-opacity-75">
 
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="w-full xl:px-2 xl:mt-6 xl:mb-6 px-2mt-2 mb-2">
+        <div class="w-full pl-2 xl:mt-6 xl:mb-6 mt-2 mb-2">
             <div class="flex items-center px-5 py-6  rounded-lg bg-black/20 border border-white/10">
                 <div class="p-3 rounded-full bg-orange-600 bg-opacity-75">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="white"
@@ -34,26 +34,6 @@
             </div>
         </div>
        
-    </div>
-
-    <div class="grid grid-cols-2 items-center w-full lg:flex">
-        <div>
-            <!-- <button (click)="showAddDialog = true; inputDelete()"
-                class="bg-blue-600 rounded-lg text-white p-2 text-xs lg:text-sm font-[Akko]">Termék hozzáadása</button> -->
-        </div>
-
-
-        <div class="mb-4 w-auto flex items-center text-sm text-white/80  lg:ml-2 relative col-span-2">
-
-            <svg class="absolute ml-2 w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-            </svg>
-            <input type="text" id="product-search" placeholder="Termék név..."
-                class="w-full lg:w-auto focus:ring-1 focus:outline-none flex ml-auto  p-2 pl-7 bg-black/30 border border-white/10 rounded-lg text-white focus:ring-blue-500 focus:border-blue-500" />
-        </div>
-
     </div>
     <div class="w-full lg:overflow-auto overflow-x-scroll">
         <table class="shadow-md w-full text-white/80 text-sm text-left rounded-[20px] font-[Akko] ">
@@ -135,13 +115,12 @@
                 <div class="bg-black/20 rounded-b-lg p-2 text-white/60 text-center">Erre az üzenetre már válaszoltál</div>
             </ng-container>
             <ng-template #elseTemplate>
-                <div class="flex m-4 items-center gap-2">
-                    <textarea (input)="adjustTextareaHeight($event)" rows="auto" class="outline-none bg-black/20 rounded-lg w-full p-2"></textarea>
-                    <svg class="fill-white w-4 mt-auto" viewBox="0 0 24 24" width="20px"><path d="M16.6915026,12.4744748 L3.50612381,13.2599618 C3.19218622,13.2599618 3.03521743,13.4170592 3.03521743,13.5741566 L1.15159189,20.0151496 C0.8376543,20.8006365 0.99,21.89 1.77946707,22.52 C2.41,22.99 3.50612381,23.1 4.13399899,22.8429026 L21.714504,14.0454487 C22.6563168,13.5741566 23.1272231,12.6315722 22.9702544,11.6889879 C22.8132856,11.0605983 22.3423792,10.4322088 21.714504,10.118014 L4.13399899,1.16346272 C3.34915502,0.9 2.40734225,1.00636533 1.77946707,1.4776575 C0.994623095,2.10604706 0.8376543,3.0486314 1.15159189,3.99121575 L3.03521743,10.4322088 C3.03521743,10.5893061 3.34915502,10.7464035 3.50612381,10.7464035 L16.6915026,11.5318905 C16.6915026,11.5318905 17.1624089,11.5318905 17.1624089,12.0031827 C17.1624089,12.4744748 16.6915026,12.4744748 16.6915026,12.4744748 Z"></path></svg>                
-                </div>       
+                <form (ngSubmit)="replyMessage()" class="flex m-4 items-center gap-2">
+                    <textarea name="replyText" [(ngModel)] = "replyContent" (input)="adjustTextareaHeight($event)" rows="auto" class="outline-none bg-black/20 rounded-lg w-full p-2"></textarea>
+                    <button type="submit"><svg class="fill-white w-4 mt-auto hover:fill-[#C42329]" viewBox="0 0 24 24" width="20px"><path d="M16.6915026,12.4744748 L3.50612381,13.2599618 C3.19218622,13.2599618 3.03521743,13.4170592 3.03521743,13.5741566 L1.15159189,20.0151496 C0.8376543,20.8006365 0.99,21.89 1.77946707,22.52 C2.41,22.99 3.50612381,23.1 4.13399899,22.8429026 L21.714504,14.0454487 C22.6563168,13.5741566 23.1272231,12.6315722 22.9702544,11.6889879 C22.8132856,11.0605983 22.3423792,10.4322088 21.714504,10.118014 L4.13399899,1.16346272 C3.34915502,0.9 2.40734225,1.00636533 1.77946707,1.4776575 C0.994623095,2.10604706 0.8376543,3.0486314 1.15159189,3.99121575 L3.03521743,10.4322088 C3.03521743,10.5893061 3.34915502,10.7464035 3.50612381,10.7464035 L16.6915026,11.5318905 C16.6915026,11.5318905 17.1624089,11.5318905 17.1624089,12.0031827 C17.1624089,12.4744748 16.6915026,12.4744748 16.6915026,12.4744748 Z"></path></svg>                
+                    </button>
+                </form>       
             </ng-template>
-            
-          
         </div>
     </div>
 </div>
