--- a/src/app/pages/admin/login/login.component.html
+++ b/src/app/pages/admin/login/login.component.html
@@ -7,7 +7,7 @@
 
             <div class="flex flex-col gap-2">
                 <label for="email" class="text-white">E-Mail cím</label>
-                <input id="email" name="userEmail" [(ngModel)]="loginData.username" required class="w-full bg-inherit outline-none px-2 border py-2  border-[rgb(215_215_215)] text-white rounded-[5px] focus:border-[#C42329] transition-all duration-200" type="text" placeholder="E-Mail cím">          
+                <input id="email" name="userEmail" [(ngModel)]="loginData.email" required class="w-full bg-inherit outline-none px-2 border py-2  border-[rgb(215_215_215)] text-white rounded-[5px] focus:border-[#C42329] transition-all duration-200" type="text" placeholder="E-Mail cím">          
             </div>
             <div class="flex flex-col gap-2">
                 <label for="email" class="text-white">Jelszó</label>
