--- a/src/app/pages/admin/admin-messages/admin-messages.component.html
+++ b/src/app/pages/admin/admin-messages/admin-messages.component.html
@@ -59,7 +59,7 @@
                 <tr *ngFor="let messageValue of messageList; let i = index"
                     class="last:border-b-0 border-b bg-black/20 border-white/10 hover:bg-white/10 ">
                     <td scope="row" align="left" class="px-6 py-4">
-                        <div *ngIf="messageValue['isReplied'] === false" class="flex w-2 h-2 rounded-full bg-red-500 mr-2"></div>
+                        <div *ngIf="messageValue['is_replied'] === false" class="flex w-2 h-2 rounded-full bg-red-500 mr-2"></div>
                     </td>
                     
                     <td scope="row" align="left" class="px-6 py-4">                     
@@ -69,7 +69,7 @@
                         {{ messageValue["email"] }}
                     </td>
                     <td scope="row" align="center" class="px-6 py-4">
-                        {{ messageValue["messageContent"] }}
+                        {{ messageValue["message_content"] }}
                     </td>
 
 
@@ -102,16 +102,16 @@
 
             </div>
             <div class="m-4 p-4 w-fit max-w-[75%] bg-black/20 rounded-lg font-[Akko-light]">
-                {{ messageList[currentResponseID]["messageContent"] }}
+                {{ messageList[currentResponseID]["message_content"] }}
             </div>
 
             <div class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
                 Ez egy automatikusan generált üzenet! Az átlag válaszidő 24 óra ehhez kérjük türelmedet, üzenetedet megkaptuk és hamarosan válaszolunk..
             </div>   
-            <div *ngIf="messageList[currentResponseID]['isReplied'] === true" class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
-                {{ messageList[currentResponseID]["replyContent"]}}
+            <div *ngIf="messageList[currentResponseID]['is_replied'] === true" class="flex m-4 p-4 ml-auto font-[Akko-light] rounded-lg max-w-[75%] bg-[#C42329]/20 overflow-clip">
+                {{ messageList[currentResponseID]["reply_content"]}}
             </div> 
-            <ng-container *ngIf="messageList[currentResponseID]['isReplied'] === true; else elseTemplate">
+            <ng-container *ngIf="messageList[currentResponseID]['is_replied'] === true; else elseTemplate">
                 <div class="bg-black/20 rounded-b-lg p-2 text-white/60 text-center">Erre az üzenetre már válaszoltál</div>
             </ng-container>
             <ng-template #elseTemplate>
