--- a/src/app/pages/admin/admin-products/admin-products.component.html
+++ b/src/app/pages/admin/admin-products/admin-products.component.html
@@ -107,10 +107,22 @@
 
             </thead>
             <tbody>
+                <tr *ngIf="paginatedList.length <= 0" class="last:border-b-0 border-b bg-black/20 border-white/10 hover:bg-white/10 ">
+                    
+                    <td scope="row" class="px-6 py-4">
+                        Nem található egy darab termék sem!
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
                 <tr *ngFor="let productValue of paginatedList; let i = index"
                     class="last:border-b-0 border-b bg-black/20 border-white/10 hover:bg-white/10 ">
                     <td scope="row" class="px-6 py-4 w-4">
-                        {{ productValue["id"] || 0 }}
+                        {{ ((currentPage - 1) * 7) + 1|| 0 }}
                     </td>
                     <td scope="row" align="center" class="px-6 py-4">
                         {{ productValue["name"] || "" }}
@@ -130,17 +142,17 @@
                         {{ productValue["description"] }}
                     </td>
                     <td scope="row" class="px-6 py-4">
-                        <img class="aspect-square w-12" [src]="productValue['imagePath']" alt="" />
+                        <img class="aspect-square w-12" [src]="productValue['image']" alt="" />
                     </td>
                     <td scope="row" class="px-6 py-4">
                         <span class="flex gap-2">
-                            <svg (click)="showEditProduct(productValue['id'])"
+                            <svg (click)="showEditProduct(productValue['_id'])"
                                 class="w-4 fill-white/80 hover:fill-[#db8a2f] cursor-pointer"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path
                                     d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z" />
                             </svg>
-                            <svg (click)="showDeleteDialog = true; setActionIndex(productValue['id'])"
+                            <svg (click)="showDeleteDialog = true; setActionIndex(productValue['_id'])"
                                 class="w-4 fill-white/80 hover:fill-red-500 cursor-pointer"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                 <path
@@ -154,7 +166,7 @@
 
         </table>
     </div>
-    <nav aria-label="paginate" class="mt-4 flex items-center justify-between px-2 pb-4 lg:pb-0">
+    <nav *ngIf="paginatedList.length > 0"  aria-label="paginate" class="mt-4 flex items-center justify-between px-2 pb-4 lg:pb-0">
         <span class="font-[Akko] text-sm text-gray-300">
             Jelenlegi termékek {{(currentPage * itemsPerPage) - (itemsPerPage - 1)}} - {{
             getCurrentMaxPage(currentPage) }}
@@ -196,7 +208,7 @@
     </nav>
 </div>
 <!-- DIALOG -->
-<div *ngIf="showAddDialog" class="w-full ">
+<div *ngIf="showAddDialog" class="relative w-full z-[1000]">
     <div
         class="fixed left-0 top-0 outline-none w-full h-screen bg-black/60 backdrop-blur-sm border-0 flex py-2 items-center justify-center ">
         <div
@@ -276,7 +288,7 @@
 </div>
 
 <!-- EDIT DIALOG -->
-<div *ngIf="showEditDialog" class="w-full ">
+<div *ngIf="showEditDialog" class="relative w-full z-[1000]">
     <div
         class="fixed left-0 top-0 outline-none w-full h-screen bg-black/60 backdrop-blur-sm border-0 flex py-2 items-center justify-center ">
         <div
@@ -357,7 +369,7 @@
 
 
 <!-- DELETE DIALOG -->
-<div *ngIf="showDeleteDialog" class=" w-full">
+<div *ngIf="showDeleteDialog" class="relative w-full z-[1000]">
     <div
         class="fixed left-0 top-0 outline-none w-full h-screen bg-black/60 backdrop-blur-sm border-0 flex items-center justify-center overflow-hidden">
         <div class="bg-[#1E1E1E] text-white font-[Akko] rounded-lg max-w-md w-full">
