--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,9 @@
 .title-shadow {
     text-shadow: 3px 3px 2px rgba(0, 0, 0, 1);
 }
+
+@media only screen and (max-width: 1024px)  {
+    .title-shadow {
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+    }
+}
