--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,42 +1,42 @@
 <section id="home" class="max-h-[80vh] overflow-hidden relative mb-24">
-    <div class="absolute left-0 top-0 backdrop-blur-lg w-full h-full z-10">
+    <div class="absolute left-0 top-0  w-full h-full z-30">
         <div class="absolute left-[50%] top-[50%] translate-x-[-50%] translate-y-[-50%] flex flex-col text-center ">
-            <h1 class="title-shadow title font-[Allura] text-[#C42329] text-7xl">
+            <h1 class="title-shadow title font-[Allura] text-[#C42329] text-5xl lg:text-6xl xl:text-7xl">
                 Friss hús és hentesáru 
             </h1>
-            <h1 class="title-shadow title2 font-[Allura] text-[#C42329] text-7xl">
+            <h1 class="title-shadow title2 font-[Allura] text-[#C42329] text-5xl lg:text-6xl xl:text-7xl">
                 Egyenesen a termelőtől
             </h1>
 
-            <a routerLink="products/" routerLinkActive="active" class="opacity-0 cursor-pointer transition duration-300 hover:bg-[#C42329] border-[#C42329] border px-6 py-2 mt-8 rounded-[20px] mx-auto text-white shadow-2xl title-shadow font-[Akko] product-button">Termékeink megtekintése</a>
+            <a routerLink="products/" routerLinkActive="active" class="relative opacity-0 z-[30] cursor-pointer transition duration-300 hover:bg-[#C42329] border-[#C42329] border px-6 py-2 mt-8 rounded-[20px] mx-auto text-white shadow-2xl title-shadow font-[Akko] product-button">Termékeink megtekintése</a>
         </div>
     </div>
-    <video [muted]="'muted'" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="w-screen"></video>
-    <img class="absolute bottom-0 w-full z-20" src="assets/images/bg.svg" alt="">
+    <video [muted]="'muted'" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="absolulte left-0 top-0 h-screen lg:w-screen object-cover blur-lg"></video>
+    <img class="absolute bottom-0 left-[-50vw] min-w-[200vw] lg:left-auto lg:min-w-[100vw] z-20" src="assets/images/bg.svg" alt="">
     
     
 </section>
 <div class="flex gap-8 justify-center overflow-hidden">
-    <img class="opacity-20" src="/assets/images/tape/chicken.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/salami.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/meat.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/ham.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/fish.png" alt="" />  
-    <img class="opacity-20" src="/assets/images/tape/chicken.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/salami.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/meat.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/ham.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/fish.png" alt="" />  
-    <img class="opacity-20" src="/assets/images/tape/chicken.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/salami.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/meat.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/ham.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/fish.png" alt="" />  
-    <img class="opacity-20" src="/assets/images/tape/chicken.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/salami.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/meat.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/ham.png" alt="" />
-    <img class="opacity-20" src="/assets/images/tape/fish.png" alt="" />  
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/chicken.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/salami.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/meat.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/ham.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/fish.png" alt="" />  
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/chicken.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/salami.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/meat.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/ham.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/fish.png" alt="" />  
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/chicken.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/salami.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/meat.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/ham.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/fish.png" alt="" />  
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/chicken.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/salami.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/meat.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/ham.png" alt="" />
+    <img class="opacity-20 w-8 h-8 md:h-16 md:w-16" src="/assets/images/tape/fish.png" alt="" />  
 
 </div>
    
