--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -1,19 +1,43 @@
-<div class="w-screen fixed left-0 top-0 z-[10000] bg-black/30">
-    <div class="mx-auto flex items-center justify-between w-3/4 py-2">
+<div class="w-screen fixed left-0 top-0 z-[10000] bg-black/30 backdrop-blur-lg">
+    <div class="mx-auto items-center justify-between w-3/4 py-2 flex">
         <div class="flex">
-            <img class="h-14" src = "assets/images/logo.png" alt="" />
+            <img class="h-14" src="assets/images/logo.png" alt="" />
             <div class="flex flex-col items-center justify-center text-white text-lg ml-2">
-                <span class="uppercase bg-gradient-to-r from-[#C42329] to-white bg-clip-text text-transparent font-[Barlow-bold]">Húsház</span>
-                <span class="uppercase bg-gradient-to-r from-[#FFFFFF] to-[#C42329] bg-clip-text text-transparent font-[Barlow-bold]">Villány</span>
+                <span
+                    class="uppercase bg-gradient-to-r from-[#C42329] to-white bg-clip-text text-transparent font-[Barlow-bold]">Húsház</span>
+                <span
+                    class="uppercase bg-gradient-to-r from-[#FFFFFF] to-[#C42329] bg-clip-text text-transparent font-[Barlow-bold]">Villány</span>
             </div>
         </div>
-            
-        <ul class="flex gap-8 text-lg uppercase">
-            <a routerLink="{{item[1]}}" routerLinkActive="active" acti class="text-white font-[Akko] group transition duration-300 relative" *ngFor="let item of menus">
-                <div class="absolute content-[''] w-full left-0 bottom-0 h-[2px] bg-[#C42329] transform origin-right group-hover:scale-[100%] transition-transform duration-500 group-hover:origin-left" [ngClass]="{'scale-[100%]': route === item[1], 'scale-x-[0]': route != item[1]}"></div>
+
+        <ul class="gap-8 text-lg uppercase hidden lg:flex">
+            <a routerLink="{{item[1]}}" routerLinkActive="active" acti
+                class="text-white font-[Akko] group transition duration-300 relative" *ngFor="let item of menus">
+                <div class="absolute content-[''] w-full left-0 bottom-0 h-[2px] bg-[#C42329] transform origin-right group-hover:scale-[100%] transition-transform duration-500 group-hover:origin-left"
+                    [ngClass]="{'scale-[100%]': route === item[1], 'scale-x-[0]': route != item[1]}"></div>
                 {{ item[0] }}
             </a>
         </ul>
+        <div class="flex lg:hidden">
+            <div (click)="showMobileNavBar=!showMobileNavBar" class="w-6 h-0.5 bg-white relative
+                    before:w-6 before:h-0.5 before:content-[''] before:absolute before:translate-y-2 before:bg-white
+                    after:w-6 after:h-0.5 after:content-[''] after:absolute after:-translate-y-2 after:bg-white transition-all duration-300 before::transition-all after:duration-300 before::transition-all
+                "
+                [ngClass]="{'after:opacity-0 after:-rotate-45 rotate-45 after:-translate-y-[0px] before:translate-y-[0px]  before:-rotate-90': showMobileNavBar === true}">
+            </div>
+            <div [ngClass]="{'translate-x-full': showMobileNavBar === true}" class="lg:hidden w-auto pr-10 font-[Akko] backdrop-blur-lg flex flex-col justify-between fixed right-full top-0 bg-black/80 min-h-screen transition-all duration-300 z-[200]">
+                <div>
+                    <ul class="my-2">
+                        <a (click)="showMobileNavBar = false" [routerLink]="menuValues[1]" routerLinkActive="true" class=" relative flex items-center gap-2 mx-4 rounded-lg px-2 py-2 text-[#c8c8c8] group hover:bg-white/10 hover:text-white duration-150" *ngFor="let menuValues of menus">
+                            <img class="w-5" [src]="['/assets/images/icons/' + menuValues[2 ]]" alt="" />
+                            <span class="font-medium ml-2"> {{ menuValues[0] }} </span>    
+              
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
     </div>
-</div> 
-<router-outlet/>
+</div>
+<router-outlet />
