--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -4,14 +4,14 @@
     </h1>
 </div>
 
-<div class="w-1/3 mx-auto mt-8">
-    <div class="flex ml-auto mr-2 justify-end gap-2 font-[Akko] text-white">
+<div class="w-full px-2 lg:w-1/3 mx-auto mt-8">
+    <div class="flex mx-auto lg:ml-auto mr-2 justify-center lg:justify-end gap-2 font-[Akko] text-white">
         <span class="rounded-[50px] bg-black/20 p-2 px-4 text-[#] border border-[#C42329]">Összes hirdetés</span>
         <span class="rounded-[50px] bg-black/20 p-2 px-4 border border-white/10">Legutóbbi hirdetés</span>
     </div>
 </div>
 
-<div class="flex flex-col mt-8 gap-6 w-1/3 mx-auto">
+<div class="flex flex-col mt-8 gap-6 w-full px-6 lg:w-1/3 mx-auto">
     <div *ngFor="let newsValue of newsList" class="flex flex-col w-full bg-black/10 rounded-[20px] mx-auto font-[Akko-light] text-white border border-white/10 relative">
         <div *ngIf="newsValue[2] === 0" class="absolute left-0 top-0 bg-black/10 backdrop-blur-sm w-full h-full rounded-[20px] flex items-center justify-center">
             <div class="text-red-500 text-3xl font-[Akko] text-shadow">Lejárt hirdetés</div>
