--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <video [muted]="'muted'" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="absolulte left-0 top-0 h-screen lg:w-screen object-cover blur-lg"></video>
-    <img class="absolute bottom-0 left-[-50vw] min-w-[200vw] lg:left-auto lg:min-w-[100vw] z-20" src="assets/images/bg.svg" alt="">
+    <img class="absolute bottom-[-1px] left-[-50vw] min-w-[200vw] lg:left-auto lg:min-w-[100vw] z-20" src="assets/images/bg.svg" alt="">
     
     
 </section>
