--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
         </aside>
     </div>
     <!-- MOBILE -->
-    <div class="relative mt-0 lg:hidden  font-[Akko]">
+    <div class="relative mt-0 lg:hidden  font-[Akko] backdrop-blur-lg">
         <nav class="w-full flex items-center justify-between fixed left-0 top-0 bg-black/60 z-[100] px-6 py-2">
             <img class="h-12" src="/assets/images/logo.png" alt="" />
             <div (click)="showMobileNavBar=!showMobileNavBar" class="w-6 h-0.5 bg-white relative
