--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
             <a routerLink="products/" routerLinkActive="active" class="relative opacity-0 z-[30] cursor-pointer transition duration-300 hover:bg-[#C42329] border-[#C42329] border px-6 py-2 mt-8 rounded-[20px] mx-auto text-white shadow-2xl title-shadow font-[Akko] product-button">Termékeink megtekintése</a>
         </div>
     </div>
-    <video [muted]="'muted'" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="absolulte left-0 top-0 h-screen lg:w-screen object-cover blur-lg"></video>
+    <video [muted]="'muted'" controls="false" loop autoplay src="/assets/videos/joszkaegybuzi.mp4" class="absolulte left-0 top-0 h-screen lg:w-screen object-cover blur-lg"></video>
     <img class="absolute bottom-[-1px] left-[-50vw] min-w-[200vw] lg:left-auto lg:min-w-[100vw] z-20" src="assets/images/bg.svg" alt="">
     
     
