--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -18,8 +18,8 @@
                 {{ item[0] }}
             </a>
         </ul>
-        <div class="flex lg:hidden">
-            <div (click)="showMobileNavBar=!showMobileNavBar" class="w-6 h-0.5 bg-white relative
+        <div (click)="showMobileNavBar=!showMobileNavBar" class="flex lg:hidden">
+            <div class="w-6 h-0.5 bg-white relative
                     before:w-6 before:h-0.5 before:content-[''] before:absolute before:translate-y-2 before:bg-white
                     after:w-6 after:h-0.5 after:content-[''] after:absolute after:-translate-y-2 after:bg-white transition-all duration-300 before::transition-all after:duration-300 before::transition-all
                 "
